--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "tai-password-strength": "^1.1.1"
   },
   "devDependencies": {
     "webpack": "^4.28.3",
