--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bananapassword",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Banana Password",
   "main": "server.js",
   "scripts": {
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "nodemon": "^2.0.7",
     "require": "^2.4.20",
     "tai-password-strength": "^1.1.1"
   },
